plugins {
	id 'java'
}

repositories {
	mavenLocal()
	maven {
		url = 'https://repo.runelite.net'
	}
	mavenCentral()
}

def runeLiteVersion = '1.7.2.2'

dependencies {
	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion

	compileOnly 'org.projectlombok:lombok:1.18.4'
	annotationProcessor 'org.projectlombok:lombok:1.18.4'

	testImplementation 'org.mockito:mockito-core:3.3.3'
	testImplementation 'junit:junit:4.12'
	testImplementation 'org.slf4j:slf4j-simple:1.7.12'
	testCompileOnly 'org.projectlombok:lombok:1.18.4'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.4'
	testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion, {
		exclude group: 'ch.qos.logback', module: 'logback-classic'
	}
}

group = 'com.flipper'
version = '1.2.0'
sourceCompatibility = '1.8'

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}
